--- a/Reportes Articulos/Resumen_artículo1.tex
+++ b/Reportes Articulos/Resumen_artículo1.tex
@@ -27,9 +27,9 @@ Los $\beta$-esqueletos son grafos, en la mayoría de casos 2-D, en el cual dos p
 
 Dado que la cantidad de puntos puede aumentar de gran manera dependiendo de la aplicación, es importante la generación de algoritmos óptimos para la obtención del grafo. Este es el caso de \cite{unoados} en donde se muestra un algoritmo óptimo para la construcción del \textit{Relative Neighborhood Graph} para el caso $1\leq\beta\leq2$ con un tiempo de $\mathcal{O}(n)$, usando una triangulación Delaunay, en la cual ningún punto puede estar dentro de la circunferencia circunscrita por cada triángulo. Por otro lado, en \cite{menosdeuno}  se muestra un algoritmo $\mathcal{O}(n^2)$ para el caso de $\beta<1$.
 
-Los procesadores usados para la programación en paralelo seguían un modelo CREW-PRAM, el cual quiere decir que múltiples procesadores podían leer una célda de memoria simultáneamente pero sólo uno podía escribirla (\textit{Concurrent read exclusive write}: CREW). El término PRAM viene de Parallel RAM. El pseudo-algoritmo diseñado para la generación del $\beta$\textit{spectrum} (o la lista de todos los vértices de un esqueleto) fue: construir la triangulación de Delaunay, construir el conjunto de árboles de eliminación (bosque de eliminación), extraer los polígonos conectados a cada árbol de eliminación, extracción de polígonos centrales y finalmente la estructura de Voronoi.
+Los procesadores usados para la programación en paralelo seguían un modelo CREW_PRAM, el cual quiere decir que múltiples procesadores podían leer una célda de memoria simultáneamente pero sólo uno podía escribirla (\textit{Concurrent read exclusive write}: CREW). El término PRAM viene de Parallel RAM. El pseudo-algoritmo diseñado para la generación del $\beta$-\textit{spectrum} (o la lista de todos los vértices de un esqueleto) fue: construir la triangulación de Delaunay, construir el conjunto de árboles de eliminación (bosque de eliminación), extraer los polígonos conectados a cada árbol de eliminación, extracción de polígonos centrales y finalmente la estructura de Voronoi.
 
-Para el caso del uso de paralelismo para la generación de esqueletos, se asignan los vértices de los árboles de eliminación a procesadores, alternando una clasificación entre procesadores ``blancos'' y ``negros ''. La idea es que en cada iteración para cada árbol de eliminación, eliminar grupos de procesadores negros o blanco. Al eliminar un grupo, se realiza la conexión de los grupos adyacentes (ya sean blancos o negros). Para el caso a $\beta\in[1,2]$ se demuestra que este algoritmo tiene una velocidad de convergencia de $\mathcal{O}(\log^2n)$.
+Para el caso del uso de paralelismo para la generación de esqueletos, se asignan los vértices de los árboles de eliminación a procesadores, alternando una clasificación entre procesadores ``blancos'' y ``negros''. La idea es que en cada iteración para cada árbol de eliminación, eliminar grupos de procesadores negros o blanco. Al eliminar un grupo, se realiza la conexión de los grupos adyacentes (ya sean blancos o negros). Para el caso a $\beta\in[1,2]$ se demuestra que este algoritmo tiene una velocidad de convergencia de $\mathcal{O}(\log^2n)$.
 
 
 %\nocite{*}
